<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/menu_places"
            android:title="@string/menu_places" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/menu_chat"
            android:title="@string/menu_chat" />

    </group>

    <item android:title="Account"
        >
        <menu>
            <group android:checkableBehavior="single">
            <item

                android:id="@+id/nav_edit"
                android:icon="@drawable/menu_edit"
                android:title="@string/menu_edit" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/menu_logout"
                android:title="@string/menu_log_out" />
            </group>
        </menu>
    </item>




</menu>
