<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.project1.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_bg3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            />
        <EditText
            android:id="@+id/TxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/input"
            android:textColor="@color/colorTextInput"
            android:layout_margin="15dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/TxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:background="@drawable/input"
            android:textColor="@color/colorTextInput"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/botonRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/circle_white"
            android:textColor="@color/colorTextButton"
            android:text="@string/register" />

        <Button
            android:id="@+id/botonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/circle_white"
            android:textColor="@color/colorTextButton"
            android:text="@string/login" />



    </LinearLayout>

</RelativeLayout>